# lindy-hop

./: .firebaserc  .gitignore  Cargo.toml  README.md  default.env  firebase.json
src/: build.rs  config.rs  copy_new_videos.rs  hash_file.rs  list_mtp_mounts.rs  main.rs  prepare_new_videos_for_tagging.rs  re_encode_videos.rs  tags_file.rs  utils.rs
web_src/: css.css  index.html  index.html.hbs  index.mjs  js.mjs  video.html.hbs  video_page.html.hbs
web_src/debug/: debug_video_player.html
web_src/pages/: about_page.html.hbs  home_page.html.hbs  tag_page.html.hbs  video_page.html.hbs
web_src/partials/: head.html.hbs  search.html.hbs  video.html.hbs
web_src/static/: css.css  js.mjs  video_player.mjs
