[package]
name = "lindy-hop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.28", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
serde = "1.0.217"
serde_json = "1.0.138"
users = "0.11.0"
