[package]
name = "lindy-hop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
base16ct = { version = "0.2.0", features = ["std"] }
clap = { version = "4.5.28", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
envy = "0.4.2"
handlebars = "6.3.1"
itertools = "0.14.0"
log = "0.4.25"
pbkdf2 = "0.12.2"
regex = "1.11.1"
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
unidecode = "0.3.0"
users = "0.11.0"
